final styles for login / signup

--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -2,7 +2,6 @@
 <link rel="shortcut icon" type="image/gif" href="{{STATIC_URL}}images/favicon.ico"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/bijou.min.css"/>
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/main.css"/>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/index.css"/>
 <html>
     <head>
         <title>The Automator</title>
@@ -15,7 +14,7 @@
             </div>
         </div>
         {% load i18n %}
-        <div class="container main">
+        <div class="container">
             {% block content %}{% endblock %}
         </div>
     </body>
