--- a/atmatr/apps/frontend/templates/index.html
+++ b/atmatr/apps/frontend/templates/index.html
@@ -1,9 +1,18 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="banner row index">
-        <div class="span ten">
-            <h4>The Automator is a generic tool for automating web sessions.</h4>
-        </div>
-    </div>
+<h4 class="explainer">THE AUTOMATOR IS A SIMPLE AND GENERIC TOOL FOR AUTOMATING WEB SESSIONS</h4>
+<table style="border-spacing:20px">
+    <tr>
+        <td>
+            <a href="{{SITE_URL}}accounts/login/"><button class="button primary large">Log In</button></a>
+        </td>
+        <td>
+            OR
+        </td>
+        <td>
+            <a href="{{SITE_URL}}accounts/register/"><button class="button primary large">Sign Up</button></a>
+        </td>
+    </tr>
+</table>
 {% endblock %}
