--- a/atmatr/apps/frontend/templates/registration/login.html
+++ b/atmatr/apps/frontend/templates/registration/login.html
@@ -1,14 +1,23 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
+<h4 class="explainer">LOG IN</h4>
 <form method="post" action=".">
   {% csrf_token %} 
-  {{ form.as_p }}
-
-  <input type="submit" value="{% trans 'Log in' %}" />
-  <input type="hidden" name="next" value="{{ next }}" />
+  <table class="form-table">
+      {{ form.as_table }}
+      <tr></tr>
+      <tr>
+          <td></td><td><input class="button primary small" type="submit" value="{% trans 'Log in' %}" /></td>
+      </tr>
+      <tr></tr>
+      <tr></tr>
+      <tr>
+          <td colspan="2">{% trans "Forgot your password" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reset it" %}</a>!</td>
+      </tr>
+      <input type="hidden" name="next" value="{{ next }}" />
+  </table>
 </form>
 
-<p>{% trans "Forgot password" %}? <a href="{% url 'auth_password_reset' %}">{% trans "Reset it" %}</a>!</p>
-<p>{% trans "Not member" %}? <a href="{% url 'registration_register' %}">{% trans "Register" %}</a>!</p>
 {% endblock %}
