--- a/atmatr/apps/frontend/templates/registration/registration_complete.html
+++ b/atmatr/apps/frontend/templates/registration/registration_complete.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
 <p>{% trans "You are now registered. Activation email sent." %}</p>
