--- a/atmatr/public/static/styles/main.css
+++ b/atmatr/public/static/styles/main.css
@@ -1,1 +1,26 @@
-.main {text-align:center;}
+/* basic element types */
+
+table.form-table {
+    text-align:right;
+    border-spacing:10px;
+}
+
+th {font-weight:normal;}
+
+input {font-family:inherit;
+       font-size:13px;
+       padding:2px;
+}
+
+/* specialized utility classes */
+
+.explainer {
+    font-weight: 200;
+    color: #AAA;
+    margin-bottom: 20px;
+}
+
+.center {text-align:center;
+         margin-left:auto;
+         margin-right:auto;
+}
