styles and more reg stuff

--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -10,7 +10,7 @@
     <body style="margin-top:60px">
         <div class="navbar fixed">
             <div class="container">
-                <h4 class="pull-left">The Automator</h4>
+                <h4 class="pull-left"><a href="{{BASE_URL}}" style="color:black">The Automator</a></h4>
             </div>
         </div>
         {% load i18n %}
