--- a/atmatr/apps/frontend/templates/index.html
+++ b/atmatr/apps/frontend/templates/index.html
@@ -5,13 +5,13 @@
 <table style="border-spacing:20px">
     <tr>
         <td>
-            <a href="{{SITE_URL}}accounts/login/"><button class="button primary large">Log In</button></a>
+            <a href="{{BASE_URL}}accounts/login/"><button class="button primary large">Log In</button></a>
         </td>
         <td>
             OR
         </td>
         <td>
-            <a href="{{SITE_URL}}accounts/register/"><button class="button primary large">Sign Up</button></a>
+            <a href="{{BASE_URL}}accounts/register/"><button class="button primary large">Sign Up</button></a>
         </td>
     </tr>
 </table>
