--- a/atmatr/apps/frontend/templates/registration/password_change_form.html
+++ b/atmatr/apps/frontend/templates/registration/password_change_form.html
@@ -2,10 +2,15 @@
 {% load i18n %}
 
 {% block content %}
+<h4 class="explainer">CHANGE YOUR PASSWORD</h4>
 <form method="post" action=".">
   {% csrf_token %} 
-  {{ form.as_p }}
-
-  <input type="submit" value="{% trans 'Submit' %}" />
+  <table class="form-table">
+      {{ form.as_table}}
+      <tr></tr>
+      <tr>
+          <td></td><td><input class="button primary small" type="submit" value="{% trans 'Submit' %}" /></td>
+      </tr>
+  </table>
 </form>
 {% endblock %}
