--- a/atmatr/apps/frontend/templates/index.html
+++ b/atmatr/apps/frontend/templates/index.html
@@ -2,17 +2,5 @@
 
 {% block content %}
 <h4 class="explainer">THE AUTOMATOR IS A SIMPLE AND GENERIC TOOL FOR AUTOMATING WEB SESSIONS</h4>
-<table style="border-spacing:20px">
-    <tr>
-        <td>
-            <a href="{{BASE_URL}}accounts/login/"><button class="button primary large">Log In</button></a>
-        </td>
-        <td>
-            OR
-        </td>
-        <td>
-            <a href="{{BASE_URL}}accounts/register/"><button class="button primary large">Sign Up</button></a>
-        </td>
-    </tr>
-</table>
+<h4 class="explainer">DEFAULT INDEX TEMPLATE</h4>
 {% endblock %}
