added django debug toolbar

--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -11,6 +11,7 @@
         <div class="navbar fixed">
             <div class="container">
                 <h4 class="pull-left"><a href="{{BASE_URL}}" style="color:black">The Automator</a></h4>
+                <h4 class="pull-right"><a href="{{BASE_URL}}" style="color">Log out</a></h4>
             </div>
         </div>
         {% load i18n %}
