added basic form for url submission

--- a/atmatr/public/static/styles/main.css
+++ b/atmatr/public/static/styles/main.css
@@ -12,6 +12,10 @@ input {font-family:inherit;
        padding:2px;
 }
 
+input[type="url"] {
+    width: 400px;
+}
+
 /* specialized utility classes */
 
 .explainer {
