--- a/atmatr/apps/frontend/templates/index.html
+++ b/atmatr/apps/frontend/templates/index.html
@@ -1,6 +1,17 @@
 {% extends "base.html" %}
+{% load i18n %}
 
 {% block content %}
-<h4 class="explainer">THE AUTOMATOR IS A SIMPLE AND GENERIC TOOL FOR AUTOMATING WEB SESSIONS</h4>
-<h4 class="explainer">DEFAULT INDEX TEMPLATE</h4>
+{% blocktrans %}
+<h4 class="explainer">GOOD DAY TO YOU, HUMAN.<br/>I AM THE AUTOMATOR.<br/>I AM A GENERIC TOOL FOR AUTOMATING YOUR "INTER-NET" SESSIONS.</h4>
+{% endblocktrans %}
+<form action=".", method="post">{% csrf_token %}
+    <table class="form-table">
+    {{ form.as_table }}
+        <tr></tr>
+        <tr>
+            <td></td><td><input class="button primary small" type="submit" value="{% trans "AUTOMATE" %}" /></td>
+        </tr>
+    </table>
+</form>
 {% endblock %}
