parses a link and renders a (broken) treemap

--- a/atmatr/apps/frontend/templates/index.html
+++ b/atmatr/apps/frontend/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 {% blocktrans %}
-<h4 class="explainer">GOOD DAY TO YOU, HUMAN. I AM THE AUTOMATOR.<br/>I AM A GENERIC TOOL FOR AUTOMATING YOUR "INTER-NET" SESSIONS.</h4>
+<h4 class="explainer">HELLO, I AM THE AUTOMATOR.<br/>I AM A GENERIC TOOL FOR AUTOMATING YOUR WEB SESSIONS.</h4>
 {% endblocktrans %}
 <form action=".", method="post">{% csrf_token %}
     <table class="form-table">
