--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<link rel="shortcut icon" type="image/gif" href="{{STATIC_URL}}images/favicon.ico"/>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/bijou.min.css"/>
-<link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/main.css"/>
 <html>
     <head>
         <title>The Automator</title>
+        <link rel="shortcut icon" type="image/gif" href="{{STATIC_URL}}images/favicon.ico"/>
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/bijou.min.css"/>
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/main.css"/>
+        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/treemap.css"/>
     </head>
 
     <body style="margin-top:60px">
