--- a/atmatr/apps/frontend/templates/script.html
+++ b/atmatr/apps/frontend/templates/script.html
@@ -14,4 +14,19 @@
 </script>
 <script src="{{STATIC_URL}}javascript/node_modules/d3/d3.min.js"></script>
 <script src="{{STATIC_URL}}javascript/visualization/treemap.js"></script>
+<script src="{{STATIC_URL}}javascript/visualization/svg_test.js"></script>
+
+<h4>
+    SVG SCALING TEST
+</h4>
+
+<div id="svg_test">
+    <svg version="1.1"
+        xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+        width="1200" height="620">
+        <g id="svg_test_group">
+            <image id="svg_test_image" x="0" y="0" width="600" height="436" xlink:href="http://i.imgur.com/YxZstHM.jpg"/>
+        </g>
+    </svg>
+</div>
 {% endblock %}
