--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -5,7 +5,7 @@
         <link rel="shortcut icon" type="image/gif" href="{{STATIC_URL}}images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/bijou.min.css"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/main.css"/>
-        <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/treemap.css"/>
+        <script src="{{STATIC_URL}}javascript/node_modules/jquery/dist/jquery.min.js"></script>
     </head>
 
     <body style="margin-top:60px">
