--- a/atmatr/public/static/styles/main.css
+++ b/atmatr/public/static/styles/main.css
@@ -28,3 +28,15 @@ input[type="url"] {
          margin-left:auto;
          margin-right:auto;
 }
+
+#viewport {border-width:2px;
+           border-style:solid;
+           border-color:darkgray;
+           overflow: hidden;
+           position: relative;
+           margin: 0 5px;
+}
+
+#screenshot {position:absolute;
+             margin-left:0;
+}
