update README. fuck websockets

--- a/atmatr/apps/frontend/templates/base.html
+++ b/atmatr/apps/frontend/templates/base.html
@@ -5,7 +5,8 @@
         <link rel="shortcut icon" type="image/gif" href="{{STATIC_URL}}images/favicon.ico"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/bijou.min.css"/>
         <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}styles/main.css"/>
-        <script src="{{STATIC_URL}}javascript/node_modules/jquery/dist/jquery.min.js"></script>
+        <script type="text/javascript" src="{{STATIC_URL}}javascript/node_modules/requirejs/require.js"></script>
+        <script type="text/javascript" src="{{STATIC_URL}}javascript/node_modules/jquery/dist/jquery.min.js"></script>
     </head>
 
     <body style="margin-top:60px">
